# MozillaFirefox-desktop

./: Makefile.am  configure.ac  firefox-appname.patch  firefox-branded-icons.patch  firefox-browser-css.patch  firefox-crashreporter.patch  firefox-credits.patch  firefox-kde-114.patch  firefox-kde.patch  firefox-libxul-sdk.patch  firefox-libxulsdk-locales.patch  firefox-linkorder  firefox-linkorder.patch  firefox-multilocale-chrome.patch  firefox-no-default-ualocale.patch  firefox-no-gnomevfs.patch  firefox-no-sync-l10n.patch  firefox-shell-bmo624267.patch  firefox-sync-build.patch  firefox-sync-system-nss.patch  firefox-tabview.patch  firefox-ui-lockdown.patch  idldir.patch  libffi-ppc64le.patch  mozilla-639554.patch  mozilla-aarch64-599882cfb998.diff  mozilla-aarch64-bmo-810631.patch  mozilla-aarch64-bmo-963027.patch  mozilla-aarch64-bmo-963028.patch  mozilla-aarch64-bmo-963029.patch  mozilla-aarch64-bmo-963030.patch  mozilla-aarch64-bmo-963031.patch  mozilla-aarch64-startup-crash.patch  mozilla-add-glibcxx_use_cxx11_abi.patch  mozilla-arm-cpu-detection.patch  mozilla-arm-disable-edsp.patch  mozilla-arm64-libjpeg-turbo.patch  mozilla-bmo1005535.patch  mozilla-bmo1005640.patch  mozilla-bmo1233434.patch  (+85 more)
MozillaFirefox/: MozillaFirefox.changes  MozillaFirefox.desktop  MozillaFirefox.spec  _constraints  create-tar.sh  firefox-712763.patch  firefox-appdata.xml  firefox-appname.patch  firefox-browser-css.patch  firefox-crashreporter.patch  firefox-credits.patch  firefox-cross-desktop.patch  firefox-esr.changes  firefox-esr.spec  firefox-kde-114.patch  firefox-libxul-sdk.patch  (+89 more)
(+91 files in other folders)
