pkgprefdir = $(pkglibdir)/defaults/preferences
pkgbrowprefdir = $(pkglibdir)/browser/defaults/preferences
appdir = $(datadir)/applications
mimepackdir = $(datadir)/mime/packages

defpref_DATA = MozillaFirefox/spellcheck.js
defbrowpref_DATA = MozillaFirefox/kde.js MozillaFirefox/firefox.js
pkglib_DATA = MozillaFirefox/firefox.sh
bin_PROGRAMS = firefox
app_DATA = MozillaFirefox/MozillaFirefox.desktop
mimepack_DATA = MozillaFirefox/firefox.xml
